# dlong

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: python-publish.yml  pythonpackage.yml  test.yml
src/dlong/: __init__.py
src/dlong/core/: damages.py  discounts.py  recipes.py
tests/: test_placeholder.py
