[project]
name = "dlong"
description = "Prototype framework for projected socio-economic climate damages"
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "xarray",
]

[project.optional-dependencies]
test = [
    "black",
    "flake8",
    "mypy",
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/brews/dlong"
Documentation = "https://github.com/brews/dlong"
Source = "https://github.com/brews/dlong"
"Bug Tracker" = "https://github.com/brews/dlong/issues"

[build-system]
requires = [
    "setuptools>=62.0",
    "wheel",
    "setuptools_scm>=7.0",
]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]
fallback_version = "999"
