[project]
name = "dlong"
description = "Prototype framework for projected socio-economic climate damages"
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "xarray",
]

[project.optional-dependencies]
test = [
    "black",
    "flake8",
    "mypy",
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/brews/dlong"
Documentation = "https://github.com/brews/dlong"
Source = "https://github.com/brews/dlong"
"Bug Tracker" = "https://github.com/brews/dlong/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "999"

[tool.hatch.build.hooks.vcs]
version-file = "src/dlong/_version.py"

[tool.black]
extend-exclude = "_version.py"
